# ImageBasedModellingEduV1.0

./: absolute_points.ply
core/: image_exif.cc
examples/task2/: CMakeLists.txt  calss2_test_pose_from_fundamental.cc  class2_test_fundamental_ransac.cc  test_ba.txt
examples/task3/: CMakeLists.txt  class3_test_bundle_adjustment.cc  class3_test_jacobian.cc  class3_test_lm_optimize.cc  class3_test_triangle.cc
examples/task4/: CMakeLists.txt  class4_test_incremental_sfm.cc  resize.cpp
examples/task5/: class5_scene2pset_multi_views.cc  class5_scene2pset_single_view.cc
features/: matching.h
math/: functions.h  vector.h
sfm/: CMakeLists.txt  ba_linear_solver.cc  bundle_adjustment.cc  bundle_adjustment.h  bundler_matching.cc  bundler_tracks.cc  bundler_tracks.h  camera_pose.cpp  camera_pose.h  geodesy.h
